--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -24,37 +24,32 @@
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="140dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="140dp"
-                android:layout_marginBottom="13dp"
-                android:contentDescription="@string/ver_id"
+                android:layout_marginTop="30dp"
                 android:text="@string/ver_id"
-                android:textAlignment="center"
+                android:layout_gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="128dp"
-                android:layout_marginEnd="129dp"
+                android:layout_marginTop="20dp"
                 android:text="About the App"
-                android:textAlignment="center"
+                android:layout_gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView10"
-                android:layout_width="381dp"
+                android:layout_width="match_parent"
+                android:textIsSelectable="true"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="13dp"
+                android:layout_marginTop="10dp"
                 android:contentDescription="@string/aboutapp"
                 android:text="@string/aboutapp"
                 android:textAlignment="center"
@@ -63,23 +58,22 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="153dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="116dp"
-                android:layout_marginEnd="116dp"
-                android:layout_marginBottom="11dp"
+                android:layout_marginTop="20dp"
                 android:text="About Developers"
-                android:textAlignment="center"
+                android:layout_gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView2"
+                android:autoLink="email"
+                android:textIsSelectable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:contentDescription="@string/about_dev"
+                android:layout_marginTop="10dp"
                 android:text="@string/about_dev"
                 android:textAlignment="center"
                 android:textSize="15sp"
@@ -87,13 +81,13 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="243dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
-                android:contentDescription="@string/copyrit_id"
+                android:layout_marginTop="20dp"
                 android:text="@string/copyrit_id"
-                android:textAlignment="center"
+                android:layout_gravity="center"
                 android:textSize="15sp"
+                android:textColor="@android:color/black"
                 android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
