--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -11,29 +11,75 @@
         android:id="@+id/scrollView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/display"
+            android:layout_height="wrap_content">
+
+            <TableRow
                 android:layout_width="match_parent"
-                android:textColor="Black"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:weightSum="2"
+                android:gravity="center_horizontal">
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/addmodule"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:src="@mipmap/add" />
+                <TextView
+                    android:id="@+id/modulet"
+                    android:layout_width="221dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.25"
+                    android:text="Modules apper here after you\n add them"
+                    android:textColor="@android:color/black" />
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/plusbutton"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".25"
+                    android:background="@android:color/holo_red_light"
+                    android:text="+"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/attendancemiss"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".25"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@android:color/holo_red_dark" />
+
+                <Button
+                    android:id="@+id/minusbutton"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".25"
+                    android:background="@android:color/holo_green_light"
+                    android:text="-"
+                    android:textSize="20sp" />
+            </TableRow>
+        </TableLayout>
+
+
     </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addmodule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="40dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/add" />
 
 </android.support.constraint.ConstraintLayout>
