--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,6 +12,8 @@
         android:id="@+id/scrollView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,11 +48,11 @@
 
             <TextView
                 android:id="@+id/textView10"
+                android:layout_centerInParent="true"
                 android:layout_width="match_parent"
                 android:textIsSelectable="true"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:contentDescription="@string/aboutapp"
                 android:text="@string/aboutapp"
                 android:textAlignment="center"
                 android:textSize="15sp"
