--- a/app/src/main/res/layout/list_modules.xml
+++ b/app/src/main/res/layout/list_modules.xml
@@ -4,9 +4,7 @@
     android:id="@+id/cv_user"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-
-    >
+    android:layout_margin="8dp">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -49,7 +47,6 @@
             android:id="@+id/iv_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
             app:srcCompat="@drawable/ic_more_vert_black" />
