--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Help">
@@ -18,46 +19,93 @@
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="219dp"
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Maintanance Registration"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="250dp"
-                android:layout_marginBottom="100dp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"/>
+                android:id="@+id/card_view"
+                android:layout_gravity="center"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="8dp">
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="345dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="-99dp"
-                android:contentDescription="@string/h_maintanance"
-                android:text="@string/h_maintanance"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                <!--<TextView-->
+                    <!--android:id="@+id/textView4"-->
+                    <!--android:layout_width="219dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginStart="20dp"-->
+                    <!--android:layout_marginTop="20dp"-->
+                    <!--android:layout_marginEnd="250dp"-->
+                    <!--android:layout_marginBottom="100dp"-->
+                    <!--android:text="Maintanance Registration"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="219dp"
-                android:layout_height="wrap_content"
-                android:text="Timetable"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="250dp"
-                android:layout_marginBottom="100dp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/black" />
-        </LinearLayout>
-    </ScrollView>
+                <!--<TextView-->
+                    <!--android:id="@+id/textView5"-->
+                    <!--android:layout_width="345dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginStart="20dp"-->
+                    <!--android:layout_marginTop="-99dp"-->
+                    <!--android:contentDescription="@string/h_maintanance"-->
+                    <!--android:text="@string/h_maintanance"-->
+                    <!--android:textSize="15sp"-->
+                    <!--android:textStyle="bold" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/textView7"-->
+                    <!--android:layout_width="219dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginStart="20dp"-->
+                    <!--android:layout_marginTop="20dp"-->
+                    <!--android:layout_marginEnd="250dp"-->
+                    <!--android:layout_marginBottom="100dp"-->
+                    <!--android:text="Timetable"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:textStyle="bold" />-->
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="219dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="250dp"
+                    android:layout_marginBottom="100dp"
+                    android:text="Maintanance Registration"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="345dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="50dp"
+                    android:contentDescription="@string/h_maintanance"
+                    android:text="@string/h_maintanance"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="219dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="130dp"
+                    android:layout_marginEnd="250dp"
+                    android:layout_marginBottom="100dp"
+                    android:text="Timetable"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"  />
+            </android.support.v7.widget.CardView>
+    </LinearLayout>
+</ScrollView>
 </android.support.constraint.ConstraintLayout>
