--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -69,24 +69,23 @@
                 android:padding="10dp"
                 android:text="Justify Text in android"/>
 
-<<<<<<< HEAD
+
             <WebView
                 android:id="@+id/webView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-=======
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_centerInParent="true"
-                android:layout_width="match_parent"
-                android:textIsSelectable="true"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="@string/aboutapp"
-                android:textAlignment="center"
-                android:textSize="15sp"
-                android:textStyle="bold" />
->>>>>>> 8a1b5bc51e3fec63c837a2a23b9b273b12d83498
+            <!--<TextView-->
+                <!--android:id="@+id/textView10"-->
+                <!--android:layout_centerInParent="true"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:textIsSelectable="true"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:text="@string/aboutapp"-->
+                <!--android:textAlignment="center"-->
+                <!--android:textSize="15sp"-->
+                <!--android:textStyle="bold" />-->
+
 
             <!--<TextView-->
                 <!--android:id="@+id/textView"-->
