--- a/app/src/main/res/layout/list_modules.xml
+++ b/app/src/main/res/layout/list_modules.xml
@@ -5,50 +5,74 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
-    <android.support.constraint.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/mcoded"
             style="?android:textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Module Code"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Module Code" />
+
         <TextView
             android:id="@+id/mnamed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Module Name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mcoded" />
+            android:text="Module Name" />
+
         <TextView
             android:id="@+id/mtutord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:text="Turor"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mnamed" />
+            android:layout_marginStart="8dp"
+            android:text="Turor" />
+
+
         <TextView
             android:id="@+id/mabsentd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:text="Days absent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mtutord" />
-        <ImageView
-            android:id="@+id/iv_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:srcCompat="@drawable/ic_more_vert_black" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_marginStart="8dp"
+            android:text="Days absent" />
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="1">
+
+            <Button
+                android:id="@+id/absentplus"
+                android:layout_width="wrap_content"
+                android:layout_weight=".375"
+                android:layout_height="wrap_content"
+                android:text="Absent +" />
+
+            <Button
+                android:id="@+id/absentminus"
+                android:layout_width="wrap_content"
+                android:layout_weight=".375"
+                android:layout_height="wrap_content"
+                android:text="Absent -" />
+
+            <ImageButton
+                android:id="@+id/iv_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@null"
+                android:contentDescription="TODO"
+                android:src="@drawable/ic_more_vert_black" />
+
+        </TableRow>
+
+    </LinearLayout>
 </android.support.v7.widget.CardView>
