--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -26,6 +26,11 @@
             android:orientation="vertical"
             android:padding="10dp">
 
+            <WebView
+                android:id="@+id/webView"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
             <!--<TextView-->
                 <!--android:id="@+id/textView8"-->
                 <!--android:layout_width="wrap_content"-->
@@ -62,18 +67,15 @@
                 <!--android:textIsSelectable="true"-->
                 <!--android:textSize="15sp"-->
                 <!--android:textStyle="bold" />-->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="10dp"
-                android:text="Justify Text in android"/>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:padding="10dp"-->
+                <!--android:text="Justify Text in android"/>-->
 
 
-            <WebView
-                android:id="@+id/webView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+
             <!--<TextView-->
                 <!--android:id="@+id/textView10"-->
                 <!--android:layout_centerInParent="true"-->
