--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -26,6 +26,10 @@
 
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/card_view"
@@ -71,7 +75,7 @@
                     <!--android:textStyle="bold" />-->
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="219dp"
+                    android:layout_width="331dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
@@ -95,7 +99,7 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="219dp"
+                    android:layout_width="331dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="130dp"
@@ -105,6 +109,15 @@
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"  />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="-20dp"
+                    android:text="Attendance" />
+
             </android.support.v7.widget.CardView>
     </LinearLayout>
 </ScrollView>
