--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#067AD2</color>
     <color name="black">#000000</color>
+    <color name="white">#FAFAFA</color>
 </resources>
